Commande d'importation d'opérations

--- a/src/AppBundle/Resources/views/Categorie/index.html.twig
+++ b/src/AppBundle/Resources/views/Categorie/index.html.twig
@@ -23,6 +23,9 @@
                     </td>
                 {% endfor %}
                 </tr>
+            {% else %}
+                <td colspan="6"></td>
+            </tr>
             {% endfor %}
         {% endfor %}
         </tbody>
