Ajout suppression du fichier importé

--- a/src/AppBundle/Resources/views/Operation/index.html.twig
+++ b/src/AppBundle/Resources/views/Operation/index.html.twig
@@ -14,15 +14,14 @@
             </p>
             <p>
                 <a href="{{ path('app_operation_post', {'compte':compte.id}) }}" class="btn btn-sm btn-block btn-success">Nouvelle opération</a>
-                <a href="{{ path('app_pointage_index') }}" class="btn btn-sm btn-block btn-primary">Pointage</a>
             </p>
         </div>
         <div class="col-md-10">
             <table class="table table-bordered table-condensed table-striped">
                 <tr>
-                    <th class="text-center col-lg-1">Date opération</th>
-                    <th class="text-center col-lg-1">Date valeur</th>
-                    <th class="text-center col-lg-1">Mode</th>
+                    <th class="text-center width100">Date opération</th>
+                    <th class="text-center width100">Date valeur</th>
+                    <th class="text-center width100">Mode</th>
                     <th class="text-center">Libellé</th>
                     <th class="text-center width100">Débit</th>
                     <th class="text-center width100">Crédit</th>
