--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,11 +4,12 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/main.css') }}">
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -25,6 +26,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li><a href="{{ path('app_categorie_index') }}">Catégories</a></li>
+                        <li><a href="{{ path('app_pointage_index') }}">Pointage</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
@@ -41,6 +43,7 @@
 
             {% block body %}{% endblock %}
         </div>
+        <script type="text/javascript" src="{{ asset('js/jquery-2.2.3.min.js') }}" ></script>
         <script type="text/javascript" src="{{ asset('bootstrap/js/bootstrap.min.js') }}" ></script>
         {% block javascripts %}{% endblock %}
     </body>
