--- a/src/AppBundle/Resources/views/Compte/index.html.twig
+++ b/src/AppBundle/Resources/views/Compte/index.html.twig
@@ -1,12 +1,5 @@
-{% extends '::base.html.twig' %}
-
-{% block body %}
-    <div class="container">
-        <h1>Liste des comptes</h1>
-        <ul>
-            {% for compte in compteListe %}
-                <li><a href="{{ path('app_operation_index', { 'compte':compte.id }) }}">{{ compte.libelle }}</a></li>
-            {% endfor %}
-        </ul>
-    </div>
-{% endblock %}
+<ul class="dropdown-menu">
+    {% for compte in compteListe %}
+        <li><a href="{{ path('app_operation_index', { 'compte':compte.id }) }}"><strong>{{ compte.libelle }}</strong> <small>({{ compte.currentSolde|number_format(2, ',', ' ') }}€)</small></a></li>
+    {% endfor %}
+</ul>
