--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,7 +19,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{{ path('app_compte_index') }}">Accueil</a>
+                    <a class="navbar-brand" href="{{ path('homepage') }}">Accueil</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -27,6 +27,10 @@
                     <ul class="nav navbar-nav">
                         <li><a href="{{ path('app_categorie_index') }}">Catégories</a></li>
                         <li><a href="{{ path('app_pointage_index') }}">Pointage</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Comptes <span class="caret"></span></a>
+                            {{ render(controller('AppBundle:Compte:index')) }}
+                        </li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
