--- a/src/AppBundle/Resources/views/Operation/form_operation.html.twig
+++ b/src/AppBundle/Resources/views/Operation/form_operation.html.twig
@@ -31,6 +31,15 @@
             </div>
         </div>
     </div>
+    <div class="col-lg-6">
+        <div class="form-group">
+            {{ form_label(form.montant, null, { 'label_attr' : { 'class':'control-label col-sm-3' } }) }}
+            <div class="col-sm-9">
+                {{ form_widget(form.montant, { 'attr' : { 'class':'form-control'  } }) }}
+                {{ form_errors(form.montant) }}
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="row-fluid">
@@ -45,10 +54,10 @@
     </div>
     <div class="col-lg-6">
         <div class="form-group">
-            {{ form_label(form.montant, null, { 'label_attr' : { 'class':'control-label col-sm-3' } }) }}
+            {{ form_label(form.categorie, null, { 'label_attr' : { 'class':'control-label col-sm-3' } }) }}
             <div class="col-sm-9">
-                {{ form_widget(form.montant, { 'attr' : { 'class':'form-control'  } }) }}
-                {{ form_errors(form.montant) }}
+                {{ form_widget(form.categorie, { 'attr' : { 'class':'form-control'  } }) }}
+                {{ form_errors(form.categorie) }}
             </div>
         </div>
     </div>
